# RAG-Pipeline

./: .env.example  .gitignore  README.md  app2.py  pyproject.toml  requirements.txt
